--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <<!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" contet="ie=edge">
+  <meta name="apple-mobile-web-app-capable" content="yes">
     <title>AR Slider Pizzle</title>
+    <link rel="stylesheet" type="text/css" href="css/main.css">
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
 </head>
+
 <body>
   <button class="takePhoto">Take Photo</button>
-  <a-scene embedded arjs='detectionMode: mono_and_matrix; matrixCodeType:3x3'>
+
+  <a-scene embedded arjs='trackingMethod: best; detectionMode: mono_and_matrix; matrixCodeType:3x3'>
     <a-marker type='barcode' value='1'></a-marker>
     <a-marker type='barcode' value='2'></a-marker>
     <a-marker type='barcode' value='3'></a-marker>
@@ -19,7 +25,6 @@
     <a-marker type='barcode' value='9'></a-marker>
     <a-marker type='barcode' value='10'></a-marker>
     <a-marker type='barcode' value='11'></a-marker>
-    <a-marker type='barcode' value='12'></a-marker>
     <a-entity camera></a-entity>
   </a-scene>
   <div class="solved">
