--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <div class="solved">
     <a class="restart" href="./index.html">Restart</a>
   </div>
-  <a href="./assets/patterns.js" download class="download">Download Puzzle</a>
+  <a href="./assets/patterns.jpg" download class="download">Download Puzzle</a>
   <script type="text/javascript" src="js/game.js"></script>
 </body>
 </html>
