--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" contet="ie=edge">
-  <meta name="apple-mobile-web-app-capable" content="yes">
+<!--   <meta http-equiv="X-UA-Compatible" contet="ie=edge">
+  <meta name="apple-mobile-web-app-capable" content="yes"> -->
     <title>AR Slider Pizzle</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
