--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <meta charset="UTF-8">
-<!--   <meta http-equiv="X-UA-Compatible" contet="ie=edge">
-  <meta name="apple-mobile-web-app-capable" content="yes"> -->
+  <meta http-equiv="X-UA-Compatible" contet="ie=edge">
+  <meta name="apple-mobile-web-app-capable" content="yes">
     <title>AR Slider Pizzle</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
@@ -11,7 +11,8 @@
 </head>
 
 <body>
-  <button class="takePhoto">Take Photo</button>
+  <!-- <button onclick="takePhoto()" class="takePhoto" type="button">Take Photo</button> -->
+  <a href="takePhoto()" class="takePhoto" type="button">Take Photo</a>
 
   <a-scene embedded arjs='trackingMethod: best; detectionMode: mono_and_matrix; matrixCodeType:3x3'>
     <a-marker type='barcode' value='1'></a-marker>
